--- a/szemely/pom.xml
+++ b/szemely/pom.xml
@@ -42,6 +42,13 @@
    			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		
+		<dependency>
+   			<groupId>com.fasterxml.jackson.dataformat</groupId>
+    		<artifactId>jackson-dataformat-xml</artifactId>
+    		<version>2.9.7</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
