--- a/okmany/pom.xml
+++ b/okmany/pom.xml
@@ -42,6 +42,23 @@
    			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<dependency>
+   			<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
+    		<version>2.8.0</version>
+		</dependency>
+
+		<dependency>
+   			 <groupId>com.fasterxml.jackson.core</groupId>
+   			 <artifactId>jackson-databind</artifactId>
+  		 	 <version>2.9.4</version>
+		</dependency>
+
+		<dependency>
+   			<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-annotations</artifactId>
+    		<version>2.9.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
